--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
-Hello World
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Andreas Lindberg, a front-end developer that loves writing clean code and who is skilled in back-end development" />
+    <meta name="author" content="Andreas Lindberg" />
+    <meta name="keywords" content="Front-end Developer, Frontend Developer, Front-end, Frontend, Front end, Webdesign, Web design, Webdesigner, Back-end Developer, Backend Developer, Back-end, Backend, end" />
+    <meta name="robots" content="index, follow" />
+
+    <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, width=device-width" />
+    <title>Andreas Lindberg | Resume</title>
+    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster+Two:700italic|Open+Sans:400,700" />
+    <script src="https://use.fonticons.com/014830fa.js"></script>
+</head>
+
+<body>
+    <div class="container">
+
+        <header>
+            <h1>
+                <a href="http://naz.singali.net">Andreas Lindberg</a>
+                <span>Front-end developer</span>
+                <span>&amp; Designer</span>
+              </h1>
+        </header>
+
+        <section class="contact">
+            <h2>Contact</h2>
+
+            <div>
+                <i class="icon icon-envelope"></i>
+                <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#110;&#97;&#122;&#114;&#97;&#114;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" data-pre="&#110;&#97;&#122;&#114;&#97;&#114;&#115;" data-post="&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#64;</a>
+            </div>
+
+            <div>
+                <i class="icon icon-phone"></i>
+                <span data-pre="&#48;&#55;&#48;&#55;" data-post="&#48;&#50;&#56;">&#57;&#50;&#53;</span>
+            </div>
+
+            <div>
+                <i class="icon icon-map-marker"></i>
+                <span>Linköping</span>
+            </div>
+        </section>
+
+        <section class="summary">
+            <h2>Summary</h2>
+            <p>A front-end developer who loves writing clean code and is skilled in back-end development.</p>
+        </section>
+
+        <section class="skills">
+            <h2>Relevant skills</h2>
+
+            <div>
+                <h3>Advanced</h3>
+                <ul>
+
+                    <li>HTML5</li>
+
+                    <li>CSS3</li>
+
+                    <li>Javascript</li>
+
+                    <li>PrototypeJS</li>
+
+                    <li>Scriptaculous</li>
+
+                </ul>
+            </div>
+
+            <div>
+                <h3>Proficient</h3>
+                <ul>
+
+                    <li>Sass</li>
+
+                    <li>PHP</li>
+
+                    <li>SEO</li>
+
+                    <li>jQuery</li>
+
+                    <li>Scripty2</li>
+
+                </ul>
+            </div>
+
+            <div>
+                <h3>Conversant</h3>
+                <ul>
+
+                    <li>Photoshop</li>
+
+                    <li>MySql</li>
+
+                    <li>Git</li>
+
+                    <li>RequireJS</li>
+
+                    <li>Linux/Apache</li>
+
+                </ul>
+            </div>
+
+        </section>
+
+        <section class="experience">
+            <h2>Experience</h2>
+
+
+            <h3>Lead Front-end developer » Freekick AB | October 2009–January 2014</h3>
+            <ul>
+
+                <li>
+                    <span>Handled all the front-end development and graphics</span>
+                </li>
+
+                <li>
+                    <span>Mastered the proprietary template system and helped other co-workers understand it</span>
+                </li>
+
+                <li>
+                    <span>Worked closely with external AD/Graphic Designers for some projects</span>
+                </li>
+
+            </ul>
+
+        </section>
+
+        <section class="education">
+            <h2>Education</h2>
+
+
+            <h3>Valla Folkhögskola » Linköping | Class of 2007</h3>
+            <p>General Courses</p>
+
+            <h3>Berzeliusskolan » Linköping | Class of 2006</h3>
+            <p>Information technology — Programming</p>
+
+        </section>
+
+    </div>
+    <!-- <script> alert([ window.innerWidth, window.innerHeight ]); </script> -->
+</body>
+
+</html>
