--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
 
 <body>
 
-<page size="A4">
+<page>
+  <div class="sentinal"></div>
 
   <header>
     <h1>Andreas Lindberg</h1>
@@ -91,8 +92,8 @@
     <article>
       <h3>Lead Front-end developer » Freekick AB | October 2009 – January 2014</h3>
       <ul>
-        <li>Had responsible for all front-end development and graphics</li>
-        <li>Mastered the proprietary template system and helped other co-workers understand it</li>
+        <li>Responsible for all front-end development and graphics</li>
+        <li>Mastered the proprietary template system and guided co-workers in it</li>
         <li>Worked closely with external AD/Graphic Designers for some projects</li>
       </ul>
     </article>
@@ -113,6 +114,7 @@
   </section>
 </page>
 
+<script src="./main.ts"></script>
 </body>
 
 </html>
