--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
   <div class="bookmarks">
     <a class="linkedin" href="https://www.linkedin.com/in/andreas-lindberg-1a54047b">
-      <i class="fab fa-linkedin"></i>
+      <i class="fab"></i>
     </a>
   </div>
 
